Add JDK21 builds